--- a/bash/history
+++ b/bash/history
@@ -51,6 +51,9 @@ function topwds { tail -n ${2:-5000} ~/.history | cut -f 2 | sort | uniq -c | so
 # Print top $1 (10) recent commands, examining first $2 (all) arguments, based on $3 (5000) most recent commands
 function topcmds { tail -n ${3:-5000} ~/.history | cut -f 3 | cut -d ' ' -f 1-$2 | sort | uniq -c | sort -n | tail -n ${1:-10}; }
 
+# Unified history
+function unified_history { history -a; lastcmd >> ~/.history; history -n; }
+
 # Append to history on displaying next prompt
-export PROMPT_COMMAND="${PROMPT_COMMAND:-true}; history -a; lastcmd >> ~/.history"
+export PROMPT_COMMAND="${PROMPT_COMMAND:+$PROMPT_COMMAND;} unified_history"
 
