--- a/bash/history
+++ b/bash/history
@@ -1,37 +1,41 @@
-## Do not glob . or .. when using .*
-export GLOBIGNORE='.:..'
+function be_history_env {
+    # Long session history (default is 500)
+    export HISTSIZE=20000
 
-# Timestamp the history entries (important!!)
-export HISTTIMEFORMAT="%Y-%m-%d %T "
+    # Long history file (default is 500)
+    export HISTFILESIZE=100000
 
-# Long session history (default is 500)
-export HISTSIZE=20000
+    # Do not glob . or .. when using .*
+    export GLOBIGNORE='.:..'
 
-# Long history file (default is 500)
-export HISTFILESIZE=100000
+    # Timestamp the history entries (important!!)
+    export HISTTIMEFORMAT="%Y-%m-%d %T "
 
-# Ignore lines starting with space, erase earlier dups
-export HISTCONTROL="ignorespace:erasedups"
+    # Ignore lines starting with space, erase earlier dups
+    export HISTCONTROL="ignorespace:erasedups"
 
-# Reduce clutter in the history
-export HISTIGNORE='&:exit:fc:history:ht:h:l:ls:ll'
+    # Reduce clutter in the history
+    export HISTIGNORE='&:exit:fc:history:ht:h:l:ls:ll'
 
-## History options
-shopt -s histappend # Append to .bash_history on exit
-shopt -s cmdhist    # Save all lines of multi-line commands in history
-shopt -s histreedit # Edit failed history subs
-shopt -u histverify # Immediately execute history sub
+    # History options
+    shopt -s histappend # Append to .bash_history on exit
+    shopt -s cmdhist    # Save all lines of multi-line commands in history
+    shopt -s histreedit # Edit failed history subs
+    shopt -u histverify # Immediately execute history sub
+}
 
 ## Shell options
-shopt -s cdspell      # Correct spelling
-shopt -s checkhash    # Look up commands
-shopt -s checkwinsize # Update LINES and COLUMNS after each command
-shopt -s extglob      # Pattern-matching glob features
-shopt -u dotglob      # Do not include .config files in normal glob
-shopt -u failglob     # Don't fail on nomatch, just leave the *'s in
-shopt -u nullglob     # Don't go to null on nomatch, just leave the *'s in
+function be_shopt {
+    shopt -s cdspell      # Correct spelling
+    shopt -s checkhash    # Look up commands
+    shopt -s checkwinsize # Update LINES and COLUMNS after each command
+    shopt -s extglob      # Pattern-matching glob features
+    shopt -u dotglob      # Do not include .config files in normal glob
+    shopt -u failglob     # Don't fail on nomatch, just leave the *'s in
+    shopt -u nullglob     # Don't go to null on nomatch, just leave the *'s in
+}
 
-## History aliases
+## History commands
 
 # Today's history
 function ht { history | grep "$(date +%Y-%m-%d)" $@; }
@@ -52,8 +56,11 @@ function topwds { tail -n ${2:-5000} ~/.history | cut -f 2 | sort | uniq -c | so
 function topcmds { tail -n ${3:-5000} ~/.history | cut -f 3 | cut -d ' ' -f 1-$2 | sort | uniq -c | sort -n | tail -n ${1:-10}; }
 
 # Unified history
-function unified_history { history -a; lastcmd >> ~/.history; history -n; }
+function history_prompt_command { history -a; lastcmd >> ~/.history; history -n; }
 
 # Append to history on displaying next prompt
-export PROMPT_COMMAND="${PROMPT_COMMAND:+$PROMPT_COMMAND;} unified_history"
+function be_history_prompt { export PROMPT_COMMAND="${PROMPT_COMMAND:+$PROMPT_COMMAND;} history_prompt_command"; }
 
+be_history_env
+be_shopt
+be_history_prompt
